# evo-game

./: .gitignore  CHANGELOG.md  CMakeLists.txt  EvoGame.sln  README.md  README.ua.md
EvoGame/: Block.cpp  Block.h  Button.cpp  Button.h  Category.h  ClassDiagram.cd  Coin.cpp  Coin.h  Component.h  Container.cpp  DataTables.cpp  DataTables.h  Entity.cpp  Entity.h  EvoGame.tiled-project  EvoGame.tiled-session  EvoGame.vcxproj  EvoGame.vcxproj.filters  Game.cpp  Game.h  GameState.cpp  MenuState.cpp  MenuState.h  Player.cpp  Player.h  PlayerMove.cpp  PlayerMove.h  ResourceHolder.inl  ResourceIdentifiers.h  SceneNode.cpp  SceneNode.h  SpriteNode.h  StateIdentifiers.h  StateStack.cpp  StateStack.h  Test.tmx  Utility.cpp  Utility.hpp  World.cpp  World.h  (+3 more)
EvoGame/Documentation/: documentation.txt
EvoGame/Media/Map/: Map1.tmx  Map4.tmx
EvoGame/src/Code/: Main.cpp
EvoGame/src/Code/Component/: Button.h  Component.h  Label.cpp
EvoGame/src/Code/Documentation/: documentation.txt
EvoGame/src/Code/Entity/: Ladder.cpp
EvoGame/src/Code/GameLogic/: PlayerMove.h
EvoGame/src/Code/State/: GameState.cpp  GameState.h  MenuState.h
ForTest/: ForTest.vcxproj  ForTest.vcxproj.filters  main.cpp  string.cpp  string.h  test.cpp  vec.cpp  vec.h
archive/Component/: Button.cpp  Container.h  Label.h
archive/Entity/: Coin.cpp  DataTables.h  Exit.cpp  Exit.h  Ladder.h
archive/GameLogic/: World.cpp
archive/Node/: SceneNode.cpp  SpriteNode.h
archive/State/: MenuState.cpp
src/Code/: Game.cpp  Game.h  main.cpp
src/Code/Component/: Button.cpp  Button.h  Component.h  Container.cpp  Container.h  Label.cpp  Label.h
src/Code/Entity/: Block.cpp  Block.h  Coin.cpp  Coin.h  DataTables.cpp  DataTables.h  Entity.cpp  Entity.h  Entry.cpp  Entry.h  Ladder.cpp  Ladder.h  NPC.cpp  NPC.h  Player.cpp  Player.h  Transition.cpp  Transition.h
src/Code/GameEvent/: EventQueue.cpp  EventQueue.h  GameEvent.h
src/Code/GameLogic/: PlayerMove.cpp  PlayerMove.h  Settings.cpp  Settings.h  World.cpp  World.h
src/Code/InputHandle/: Category.h  Command.cpp  Command.h  CommandQueue.cpp
src/Code/Node/: SceneNode.cpp  SceneNode.h  SpriteNode.cpp
src/Code/ResourseHandle/: LocalizationManager.cpp  LocalizationManager.h  MapLoader.cpp  MapLoader.h  MapManager.cpp  MapManager.h  ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifiers.h  Utility.cpp  Utility.hpp  Utility.inl
src/Code/State/: DialogueState.cpp  DialogueState.h  GameState.cpp  GameState.h  MenuState.cpp  MenuState.h  OverState.cpp  OverState.h  PauseState.cpp  PauseState.h  SettingsState.cpp  SettingsState.h  State.cpp  State.h  StateStack.h
src/Code/State/StateLogic/: State.cpp  State.h  StateIdentifiers.h  StateStack.h
src/Media/Lang/: en.json  en.xml  languages.json  languages.xml  uk.json  uk.xml
src/Media/Map/: Map0.tmx  Map1.tmx  Map2.tmx  Map3.tmx  Map4.tmx  Map5.tmx  Map6.tmx  Test.tmx  nature-paltformer-tileset-16x16.tsx  readme.txt
